--- a/style.css
+++ b/style.css
@@ -116,6 +116,25 @@ a:hover{
     transform: none;
 }
 /*SECTIONS*/
+section{
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 10rem;
+    box-sizing:border-box;
+    min-height: fit-content;
+}
+.section-container{
+    display: flex;
+
+}
+/*Profile*/
+#profile{
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    height: 80vh;
+
+}
 
 
 
